Fix Example Config

--- a/example-config.yaml
+++ b/example-config.yaml
@@ -1,7 +1,32 @@
-Rules:
-- LabelRule:
-  - label: "type: bug"
-    project: "Bugs"
-    type: "PullRequest"
-    state: "closed"
-    column: "Closed"
+LabelRules:
+- name: PR Bugs Closed
+  description: Send PRs Labeled type: Bug to Bugs Board Closed Column
+  column: Closed
+  label: "type: bug"
+  project: Bugs
+  state: closed
+  content: PullRequest
+
+- name: Issue Bugs Closed
+  description: Send PRs Labeled type: Bug to Bugs Board Closed Column
+  column: Closed
+  label: "type: bug"
+  project: Bugs
+  state: closed
+  content: Issue
+
+- name: PR Bugs Opened
+  description: Send PRs Labeled type: Bug to Bugs Board Triage Column
+  column: Needs triage
+  label: "type: bug"
+  project: Bugs
+  state: open
+  content: PullRequest
+
+- name: Issue Bugs Opened
+  description: Send PRs Labeled type: Bug to Bugs Board Triage Column
+  column: Needs triage
+  label: "type: bug"
+  project: Bugs
+  state: open
+  content: Issue
